# AI-Skills-Compiler-SDK

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
src/agent_skill_compiler/: __init__.py  auto.py
src/agent_skill_compiler/integrations/: __init__.py  agno.py  crewai.py  generic.py  google_adk.py  langchain.py  llamaindex.py  microsoft.py  openai_agents.py
src/agent_skill_compiler/models/: __init__.py  api.py  domain.py
src/agent_skill_compiler/sdk/: __init__.py  async_client.py  client.py  config.py  noop.py
tests/: test_auto.py
